primitives/runtime-interface/tests/ui/pass_by_enum_with_struct.stderr
error: `PassByEnum` only supports enums as input type.
 --> $DIR/pass_by_enum_with_struct.rs:3:10
  |
3 | #[derive(PassByEnum)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `PassByEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
