primitives/runtime-interface/tests/ui/pass_by_enum_with_struct.rs
use sp_runtime_interface::pass_by::PassByEnum;

#[derive(PassByEnum)]
struct Test;

fn main() {}
